--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -1,44 +1,72 @@
-name: Release Image
+
+name: Build and Publish Go Image
+
 
 on:
   workflow_dispatch:
     inputs:
       release_version:
-        description: 'The version of release image'
+        description: 'The version of the release image'
         required: true
         default: 'latest'
   release:
     types:
       - published
 
+
 env:
   RELEASE_VERSION: ${{ github.ref_name }}
 
-run-name: release image ${{ inputs.release_version }} ${{ github.ref_name }}
+
+run-name: build and publish Go image ${{ inputs.release_version }} ${{ github.ref_name }}
+
 
 jobs:
   release-version:
     runs-on: ubuntu-latest
     outputs:
-      release-version: ${{ steps.get_relese_version.outputs.release_version }}
+      release-version: ${{ steps.get_release_version.outputs.release_version }}
     steps:
       - name: Get Release Version
-        id: get_relese_version
+        id: get_release_version
         run: |
           RELEASE_VERSION=${{ inputs.release_version }}
           if [ -z "$RELEASE_VERSION" ]; then
               RELEASE_VERSION=${{ env.RELEASE_VERSION }}
           fi
-          echo release_version=$RELEASE_VERSION >> $GITHUB_OUTPUT
+          echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
-  release-image:
+  build-and-push-image:
     needs: release-version
-    uses: apecloud/apecloud-cd/.github/workflows/release-image-cache.yml@v0.1.54
-    with:
-      IMG: "apecloud/dbctl"
-      VERSION: "${{ needs.release-version.outputs.release-version }}"
-      GO_VERSION: "1.22"
-      DOCKERFILE_PATH: "./docker/Dockerfile"
-      APECD_REF: "v0.1.54"
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          push: true
+          tags: |
+            falkordb/kubeblocks-dbctl:${{ needs.release-version.outputs.release-version }}
+            falkordb/kubeblocks-dbctl:latest
 
