--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -41,6 +41,7 @@ RUN --mount=type=bind,target=. \
 FROM docker.io/alpine:3.22 as dist
 ARG APK_MIRROR
 
+COPY ./config /config
 COPY --from=builder /out/dbctl /bin
 
 USER 65532:65532
